<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <MultiSelectListPreference
        android:key="@string/key_gesamtkader"
        android:title="@string/title_gesamtkader"
        android:entries="@array/gesamtkader"
        android:entryValues="@array/gesamtkader"/>

    <PreferenceCategory
        android:title="@string/preferenceCategory_title_erste_mannschaft"
    />



    <MultiSelectListPreference
        android:key="@string/key_spieler_erste_mannschaft"
        android:title="@string/title_spieler_erste_mannschaft"
        android:entries="@array/gesamtkader"
        android:entryValues="@array/gesamtkader"/>

    <EditTextPreference
        android:hint="@string/pref_gegner_erste_mannschaft_hint"
        android:key="@string/pref_gegner_erste_mannschaft_key"
        android:title="@string/pref_gegner_erste_mannschaft_title"
        />


    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_heimspiel_erste_mannschaft_key"
        android:title="@string/pref_heimspiel_erste_mannschaft_title"
        android:hint="@string/pref_heimspiel_erste_mannschaft_title"/>


    <PreferenceCategory
        android:title="@string/preferenceCategory_title_zweite_mannschaft"
        />



    <MultiSelectListPreference
        android:key="@string/key_spieler_zweite_mannschaft"
        android:title="@string/title_spieler_zweite_mannschaft"
        android:entries="@array/gesamtkader"
        android:entryValues="@array/gesamtkader"/>

    <EditTextPreference
        android:hint="@string/pref_gegner_zweite_mannschaft_hint"
        android:key="@string/pref_gegner_zweite_mannschaft_key"
        android:title="@string/pref_gegner_zweite_mannschaft_title"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_heimspiel_zweite_mannschaft_key"
        android:title="@string/pref_heimspiel_zweite_mannschaft_title"
        android:hint="@string/pref_heimspiel_zweite_mannschaft_title"/>

</PreferenceScreen>