<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="horizontal"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="0123456789"
        android:id="@+id/heimToreEingabe"
        android:hint="@string/etext_tore_heim_akt_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_tore_akt_doppelpunkt"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="0123456789"
        android:id="@+id/auswartsToreEingabe"
        android:hint="@string/etext_tore_auswarts_akt_hint"/>

</LinearLayout>