<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/linearLayoutStandardAktion"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/eingabeTextFeldStandardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etext_std_hint"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:padding="12dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/standardAktioncheckBoxZeitInEingabe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anzeigetext_std_eingabe_zeit_implementieren"
            android:checked="true"
            android:layout_alignParentStart="true"/>
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageButtonSenden"
            android:background="@drawable/ic_send_black_48px"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/standard_imbut_description" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/standardLayoutscrollViewSpieler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/standardLayoutLinearLayoutSpieler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    </ScrollView>


</LinearLayout>